Area admin created

--- a/Edu.UI/EduApp.csproj
+++ b/Edu.UI/EduApp.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\Edu.DataAccess\Edu.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\EduAdmin\Data\" />
+    <Folder Include="Areas\EduAdmin\Models\" />
+    <Folder Include="wwwroot\admin\" />
+  </ItemGroup>
+
 </Project>
